--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ googleAnalytics = "UA-145866992-1"
 
   [[params.social]]
     name = "email"
-    url = "mailto:seankellyy@gmail.com"
+    url = "mailto:sean@spkelly.com"
 
 [menu]
 
